# splat

./: .gitignore  Cargo.toml  README.md  shader.wgsl
src/: cpu.rs  main.rs  model.rs  optimize.rs  pipeline.rs
