[package]
name = "gaussian-splat"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.16.1", features = ["derive"] }
flume = "0.11.0"
glam = "0.28.0"
image = "0.25.1"
pollster = "0.3.0"
rand = "0.8"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wgpu = "0.20.1"

