[package]
name = "splat"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
flume = "0.11"
glam = "0.28"
image = "0.25"
pollster = "0.3"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wgpu = "22"

